@@ -64,13 +64,17 @@ import aipy
 import copy
 import math
 import numpy as n
+from scipy.interpolate import interp1d
 
 from lsl import astro
 from lsl.common import dp as dp_common
 from lsl.common.paths import data as dataPath
 from lsl.correlator import uvUtils
+from lsl.common.stations import lwa1
 
-__version__ = '0.3'
+from _simfast import FastVis
+
+__version__ = '0.4'
 __revision__ = '$Rev$'
 __all__ = ['srcs', 'BeamAlm', 'Antenna', 'AntennaArray', 'buildSimArray', 'buildSimData', 'scaleData', 'shiftData', '__version__', '__revision__', '__all__']
 
@@ -247,6 +251,11 @@ class AntennaArray(aipy.amp.AntennaArray):
 	Modification to the aipy.ant.AntennaArray class to add a fuction to 
 	retrieve the stands stored in the AntennaArray.ants attribute.  Also add 
 	a function to set the array time from a UNIX timestamp.
+	
+	.. versionchanged:: 1.0.1
+		Added an option to set the ASP filter for simulation proposes.  
+		This updates the bandpasses used by AIPY to include the antenna
+		impedence mis-match and the mean ARX response.
 	"""
 
 	def get_stands(self):
@@ -268,6 +277,59 @@ class AntennaArray(aipy.amp.AntennaArray):
 		
 		self.set_jultime(astro.unix_to_utcjd(timestamp))
 		
+	def set_asp_filter(self, filter='split'):
+		"""
+		Update the bandpasses for the antennas to include the effect of 
+		the antenna impedence mis-match (IMM) and the mean LWA1 ARX 
+		response.
+		
+		Valid filters are:
+		  * split
+		  * full
+		  * reduced
+		  * none
+		  
+		None is a special case where both the IMM and ARX response are 
+		removed, i.e., the bandpass is unity for all frequencies.
+		
+		.. versionadded:: 1.0.1
+		"""
+		
+		# Get the frequencies we need to estimate the bandpass for
+		freqs = self.get_afreqs()*1e9
+		freqs = freqs.squeeze()
+		
+		if filter == 'none' or filter is None:
+			# Build up the bandpass - of ones
+			resp = n.ones(freqs.size)
+			
+		else:
+			# Load in the LWA1 antennas so we can grab some data
+			ants = lwa1.getAntennas()
+			
+			# Antenna impedence mis-match
+			immf, immr = ants[0].response(dB=False)
+			immr /= immr.max()
+			immIntp = interp1d(immf, immr, kind='cubic', bounds_error=False)
+			
+			# Mean ARX filter response
+			arxf, arxr = ants[0].arx.response(dB=False)
+			for i in xrange(1, len(ants)):
+				arxfi, arxri = ants[i].arx.response(dB=False)
+				arxr += arxri
+			arxr /= arxr.max()
+			arxIntp = interp1d(arxf, arxr, kind='cubic', bounds_error=False)
+			
+			# Build up the bandpass
+			resp = n.ones(freqs.size)
+			resp *= immIntp(freqs)
+			resp *= arxIntp(freqs)
+			
+		# Update the AIPY passbands
+		for i in xrange(len(self.ants)):
+			self[i].amp = resp
+			self[i].update()
+			
 	def get_baseline_fast(self, i, j, src='z', map=None):
 		"""Return the baseline corresponding to i,j in various coordinate 
 		projections: src='e' for current equatorial, 'z' for zenith 
@@ -403,6 +465,12 @@ def buildSimArray(station, antennas, freq, jd=None, PosError=0.0, ForceFlat=Fals
 	nomials in frequency.  The spherical harmonics are used if the file 
 	'beam_shape.npz' is found in the current directory.
 	
+	.. versionchanged:: 1.0.1
+		Moved the simulation code over from AIPY to the new _simFast module.  
+		This should be much faster but under the caveats that the bandpass
+		and antenna gain patterns are the same for all antennas.  This 
+		should be a reasonable assumption for large-N arrays.
+	
 	.. versionchanged:: 0.4.0
 		Switched over to passing in Antenna instances generated by the
 		:mod:`lsl.common.station` module instead of a list of stand ID numbers.
@@ -446,9 +514,9 @@ def buildSimArray(station, antennas, freq, jd=None, PosError=0.0, ForceFlat=Fals
 		eq *= 100	# m -> cm
 		eq /= aipy.const.c	# cm -> s
 		eq *= 1e9	# s -> ns
-
+		
 		delayCoeff = n.zeros(2)
-
+		
 		amp = 0*antenna.cable.gain(freq*1e9) + 1
 		
 		ants.append( Antenna(eq[0], eq[1], eq[2], beam, phsoff=delayCoeff, amp=amp, stand=antenna.stand.id) )
@@ -456,7 +524,7 @@ def buildSimArray(station, antennas, freq, jd=None, PosError=0.0, ForceFlat=Fals
 	# Combine the array of antennas with the array's location to generate an
 	# AIPY AntennaArray object
 	simAA = AntennaArray(ants=ants, location=station.getAIPYLocation())
-
+	
 	# Set the Julian Data for the AntennaArray object if it is provided.  The try...except
 	# clause is used to deal with people who may want to pass an array of JDs in rather than
 	# just one.
@@ -471,14 +539,26 @@ def buildSimArray(station, antennas, freq, jd=None, PosError=0.0, ForceFlat=Fals
 	return simAA
 
 
-def __buildSimData(aa, srcs, pols=['xx', 'yy', 'xy', 'yx'], jd=None, phaseCenter='z', baselines=None, mask=None, verbose=False, count=None, max=None):
+def __buildSimData(aa, srcs, pols=['xx', 'yy', 'xy', 'yx'], jd=None, chan=None, phaseCenter='z', baselines=None, mask=None, verbose=False, count=None, max=None):
 	"""
 	Helper function for buildSimData so that buildSimData can be called with 
 	a list of Julian Dates and reconstruct the data appropriately.
+	
+	.. versionchanged:: 1.0.1
+		Moved the simulation code over from AIPY to the new _simFast module.  
+		This should be much faster but under the caveats that the bandpass
+		and antenna gain patterns are the same for all antennas.  This 
+		should be a reasonable assumption for large-N arrays.
 	"""
 	
 	nFreq = (n.squeeze((aa.get_afreqs()))).shape[0]
-	
+	if chan is None:
+		chanMin = 0
+		chanMax = -1
+	else:
+		chanMin = chan[0]
+		chanMax = chan[-1]
+		
 	# Update the JD if necessary
 	if jd is not None:
 		if verbose:
@@ -490,9 +570,18 @@ def __buildSimData(aa, srcs, pols=['xx', 'yy', 'xy', 'yx'], jd=None, phaseCenter
 	else:
 		jd = aa.get_jultime()
 		
+	Gij_sf = aa.passband(0,1)
+	def Bij_sf(xyz, pol):
+		Bi = aa[0].bm_response(xyz, pol=pol[0]).transpose()
+		Bj = aa[1].bm_response(xyz, pol=pol[1]).transpose()
+		Bij = Bi*Bj.conj()
+		return Bij.squeeze()
+		
 	# Compute the source parameters
+	srcs_tp = []
 	srcs_eq = []
-	srcs_mp = []
+	srcs_ha = []
+	srcs_dc = []
 	srcs_jy = []
 	srcs_fq = []
 	srcs_sh = []
@@ -503,25 +592,32 @@ def __buildSimData(aa, srcs, pols=['xx', 'yy', 'xy', 'yx'], jd=None, phaseCenter
 		src.compute(aa)
 		
 		## Remove sources below the horizon
-		srcAzAlt = aipy.coord.top2azalt(src.get_crds(crdsys='top', ncrd=3))
+		srcTop = src.get_crds(crdsys='top', ncrd=3)
+		srcAzAlt = aipy.coord.top2azalt(srcTop)
 		if srcAzAlt[1] < 0:
 				if verbose:
 					print "  %s: below horizon" % name
 				continue
 				
+		## Topocentric coordinates for the gain pattern calculations
+		srcTop.shape = (1,3)
+		srcs_tp.append( srcTop )
+		
 		## RA/dec -> equitorial 
 		srcEQ = src.get_crds(crdsys='eq', ncrd=3)
 		srcEQ.shape = (3,1)
 		srcs_eq.append( srcEQ )
 		
-		## Topocentric rotation matrix
+		## HA/dec
 		srcRA,srcDec = aipy.coord.eq2radec(srcEQ)
-		srcMap = aipy.coord.eq2top_m(aa.sidereal_time() - srcRA, srcDec)
-		srcs_mp.append( srcMap )
+		srcHA = aa.sidereal_time() - srcRA
+		srcs_ha.append( srcHA )
+		srcs_dc.append( srcDec )
 		
-		## Source flux over the bandpass
+		## Source flux over the bandpass - corrected for the bandpass
 		jys = src.get_jys()
 		jys.shape = (1,nFreq)
+		jys = Gij_sf * jys
 		srcs_jy.append( jys )
 		
 		## Frequencies that the fluxes correspond to
@@ -539,7 +635,9 @@ def __buildSimData(aa, srcs, pols=['xx', 'yy', 'xy', 'yx'], jd=None, phaseCenter
 				jys=n.concatenate(srcs_jy, axis=0),
 				mfreqs=n.concatenate(srcs_fq, axis=0),
 				srcshapes=n.concatenate(srcs_sh, axis=1) )
-	aa._cache['s_map'] = n.concatenate(srcs_mp, axis=0)
+	aa._cache['s_top'] = n.concatenate(srcs_tp, axis=0)
+	aa._cache['s_ha'] = n.concatenate(srcs_ha, axis=0)
+	aa._cache['s_dec'] = n.concatenate(srcs_dc, axis=0)
 	
 	# Build the simulated data.  If no baseline list is provided, build all 
 	# baselines avaliable
@@ -556,8 +654,26 @@ def __buildSimData(aa, srcs, pols=['xx', 'yy', 'xy', 'yx'], jd=None, phaseCenter
 	# Go!
 	if phaseCenter is not 'z':
 		phaseCenter.compute(aa)
+		pcAz = phaseCenter.az*180/numpy.pi
+		pcEl = phaseCenter.alt*180/numpy.pi
+	else:
+		pcAz = 0.0
+		pcEl = 90.0
 		
-	for pol in pols:
+	for p,pol in enumerate(pols):
+		## Apply the antenna gain pattern for each source
+		if p == 0:
+			for i in xrange(aa._cache['jys'].shape[0]):
+				aa._cache['jys'][i,:] *= Bij_sf(aa._cache['s_top'][i,:], pol)
+		else:
+			for i in xrange(aa._cache['jys'].shape[0]):
+				aa._cache['jys'][i,:] /= Bij_sf(aa._cache['s_top'][i,:], pols[p-1])	# Remove the old pol
+				aa._cache['jys'][i,:] *=  Bij_sf(aa._cache['s_top'][i,:], pol)
+				
+		## Simulate
+		uvw1, vis1 = FastVis(aa, baselines, chanMin, chanMax, pcAz, pcEl)
+		
+		## Unpack the data and repack it into a data dictionary
 		UVData['bls'][pol] = []
 		UVData['uvw'][pol] = []
 		UVData['vis'][pol] = []
@@ -566,51 +682,35 @@ def __buildSimData(aa, srcs, pols=['xx', 'yy', 'xy', 'yx'], jd=None, phaseCenter
 		UVData['jd'][pol] = []
 		
 		if mask is None:
-			for (i,j) in baselines:
-				if verbose:
-					print "Simulating data for baseline %i-%i, pol. %s" % (i,j,pol)
-
-				try:
-					crd = aa.gen_uvw(j, i, src=phaseCenter)
-					d = aa.sim(j, i, pol=pol)
-					d = aa.phs2src(d, phaseCenter, j, i)
-				except aipy.phs.PointingError:
-					continue
-					
-				UVData['bls'][pol].append( (i,j) )
-				UVData['uvw'][pol].append( n.squeeze(crd) )
-				UVData['vis'][pol].append( d )
-				UVData['wgt'][pol].append( n.ones_like(d)*len(UVData['vis'][pol][-1]) )
+			for i in xrange(uvw1.shape[0]):
+				UVData['bls'][pol].append( baselines[i] )
+				UVData['uvw'][pol].append( n.squeeze(uvw1[i,:,:]) )
+				UVData['vis'][pol].append( vis1[i,:] )
+				UVData['wgt'][pol].append( n.ones_like(vis1[i,:])*len(UVData['vis'][pol][-1]) )
 				UVData['msk'][pol].append( n.zeros_like(UVData['vis'][pol][-1]) )
 				UVData['jd'][pol].append( jd )
-		else:
-			for (i,j),msk in zip(baselines,mask):
-				if verbose:
-					print "Simulating data for baseline %i-%i, pol. %s" % (i,j,pol)
-					
-				try:
-					crd = aa.gen_uvw(j, i, src=phaseCenter)
-					d = aa.sim(j, i, pol=pol)
-					d = aa.phs2src(d, phaseCenter, j, i)
-				except aipy.phs.PointingError:
-					continue
-					
-				uvw = aa.gen_uvw(j, i, src=phaseCenter)
-				uvw = n.squeeze(crd.compress(n.logical_not(msk), axis=2))
-				vis = d.compress(n.logical_not(msk))
-				wgt = n.ones_like(vis) * len(vis)
 				
-				UVData['bls'][pol].append( (i,j) )
-				UVData['uvw'][pol].append( uvw )
-				UVData['vis'][pol].append( vis )
-				UVData['wgt'][pol].append( wgt )
+		else:
+			for i in xrange(uvw1.shape[0]):
+				msk = mask[i]
+				
+				UVData['bls'][pol].append( baselines[i] )
+				UVData['uvw'][pol].append( n.squeeze(uvw1[i,:,:].compress(n.logical_not(msk), axis=2)) )
+				UVData['vis'][pol].append( vis1[i,:].compress(n.logical_not(msk)) )
+				UVData['wgt'][pol].append( n.ones_like(UVData['vis'][pol][-1])*len(UVData['vis'][pol][-1]) )
 				UVData['msk'][pol].append( msk )
 				UVData['jd'][pol].append( jd )
 				
+	# Cleanup
+	for i in xrange(aa._cache['jys'].shape[0]):
+		aa._cache['jys'][i,:] /= Bij_sf(aa._cache['s_top'][i,:], pols[-1])	# Remove the old pol
+		aa._cache['jys'][i,:] /= Gij_sf								# Remove the bandpass
+		
+	# Return
 	return UVData
 
 
-def buildSimData(aa, srcs, pols=['xx', 'yy', 'xy', 'yx'], jd=None, phaseCenter='z', baselines=None, mask=None, verbose=False):
+def buildSimData(aa, srcs, pols=['xx', 'yy', 'xy', 'yx'], jd=None, chan=None, phaseCenter='z', baselines=None, mask=None, verbose=False):
 	"""
 	Given an AIPY AntennaArray object and a dictionary of sources from 
 	aipy.src.get_catalog, returned a data dictionary of simulated data taken at 
@@ -651,7 +751,7 @@ def buildSimData(aa, srcs, pols=['xx', 'yy', 'xy', 'yx'], jd=None, phaseCenter='
 	# Loop over Julian days to fill in the simulated data set
 	jdCounter = 1
 	for juldate in jd:
-		oBlk = __buildSimData(aa, srcs, pols=pols, jd=juldate, phaseCenter=phaseCenter, baselines=baselines, mask=mask, verbose=verbose, count=jdCounter, max=len(jd))
+		oBlk = __buildSimData(aa, srcs, pols=pols, jd=juldate, chan=chan, phaseCenter=phaseCenter, baselines=baselines, mask=mask, verbose=verbose, count=jdCounter, max=len(jd))
 		jdCounter = jdCounter + 1
 
 		for pol in oBlk['bls']:
@@ -690,7 +790,7 @@ def scaleData(dataDict, amps, delays, phaseOffsets=None):
 		
 	cGains = []
 	for i in xrange(len(amps)):
-		cGains.append( amps[i]*n.exp(2j*n.pi*fq*delays[i] +1j*phaseOffsets[i]) )
+		cGains.append( amps[i]*n.exp(2j*n.pi*fq*delays[i] + 1j*phaseOffsets[i]) )
 		
 	# Apply the scales and delays for all polarization pairs found in the original data
 	for pol in dataDict['vis'].keys():
