@@ -16,6 +16,7 @@
   * Fixed a bug in lsl.imaging.utils.CorrelatedDataUV that cause getDataSet to always return all data
   * Fixed the baseline ordering in FITS IDI files that use the stand number mapper
   * Updated the FITS IDI reader to use the UVFITS  scheme for determining baseline sets
+  * Major overhaul of the lsl.sim.vis module to use a new C-based simuation extension instead of AIPY
 
 1.0.0
   * Added in LWA Development Primitives module (lsl.reader.ldp)
